# tree-editor

./: .gitignore  README.md  app.py  pyproject.toml
src/: app.py
src/widgets/: edit_overlay.py  file_overlays.py  (+3 more)
tree_database/: adjunctions_suggestions_tree.json  adjunctions_tree_expanded.json  analogy_expanded_tree.json  character_tropes_tree_deep.json  chess_ruy_lopez_pine_tree.json  equation_pattern_deep_tree.json  foundations_tree.json  human_language_family_deep_tree.json  human_nervous_system_deep_tree.json  interfaces_tree.json  knowledge_frontiers_tree_deep.json  knowledge_tree_tree.json  language_structure_deep_tree.json  language_structure_tree.json  learning_methods_tree_expanded.json  meta_analgoeis_tree.json  meta_analogies_deeper_tree.json  meta_analogy_tree.json  meta_knowledge_trees_tree.json  meta_meta_knowledge_trees_tree.json  meta_n_analogy_tree.json  narrative_forms_tree_deep.json  natural_systems_tree.json  operation_symmetry_equation_tree.json  polish_notation_pattern_expanded_tree.json  polish_notation_refined_tree.json  problem_solving_skills_tree.json  social_patterns_hierarchy_deep_tree.json  social_patterns_hierarchy_finer_tree.json  subject_symmetry_tree.json  symmetrical_knowledge_tree.json  symmetrical_natural_systems_tree.json  symmetry_with_adjunctions_tree.json  taxonomy_deep_tree.json  taxonomy_overview_tree.json  temporal_scales_expanded_tree.json  trees_tree.json  unknown_unknowns_tree.json  weird_things_tree.json  weird_tree.json
widgets/: edit_overlay.py  file_overlays.py  messages.py  path_header.py  prompt_tree.py
(+1 files in other folders)
