[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-editor"
version = "0.1.0"
description = "A textual-based tree editor for interactive text editing."
authors = [
    { name="Will Wombell", email="willwombell@gmail.com" }
]
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0"
]
requires-python = ">=3.9"

[project.scripts]
tree-editor = "app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]